--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,17 +3,33 @@ import Layout from "../layouts/Layout.astro";
 import "@fontsource-variable/league-spartan";
 import { Image } from "astro:assets";
 import stacheImg from "../images/stache.svg";
+import "../styles/global.css";
 ---
 
 <Layout title="Code Stache">
   <main
     class="flex justify-center items-center flex-col h-full text-center lowercase"
   >
-    <header class="font-sans -space-y-20">
-      <h1 class="font-semibold tracking-[-0.1em] text-[12rem]">
+    <section
+      id="whitespace"
+      class="text-sm md:text-2xl lg:text-4xl min-h-[2rem]"
+    >
+    </section>
+
+    <header class="font-sans md:-space-y-5">
+      <h1
+        class="font-semibold tracking-[-0.1em] text-6xl md:text-[8rem] lg:text-[12rem]"
+      >
         Code Stache .
-      </h1><h2 class="text-5xl font-extralight">The Computer Company</h2>
+      </h1><h2 class="text-xl lg:text-5xl md:text-3xl font-extralight">
+        The Computer Company
+      </h2>
     </header>
-    <Image src={stacheImg} alt="Code Stache Logo" class="w-52 pt-40" />
+    <Image
+      src={stacheImg}
+      alt="Code Stache Logo"
+      class="md:w-52 w-32 md:pt-40 pt-20"
+    />
   </main>
+  <script src="../scripts/typewriter.ts"></script>
 </Layout>
