--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import "../styles/global.css";
   >
     <section
       id="whitespace"
-      class="text-sm md:text-2xl lg:text-4xl min-h-[2rem]"
+      class="text-sm md:text-2xl lg:text-4xl min-h-[2rem] md:min-h-[4rem]"
     >
     </section>
 
